--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^4.16.2",
+    "cors": "^2.8.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
