--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,7 @@
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
+    "@nestjs/cli": "^10.1.8",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
@@ -74,6 +74,6 @@
     "testEnvironment": "node"
   },
   "prisma": {
-    "schema": "../schema.prisma"
+    "schema": "./prisma/schema.prisma"
   }
 }
