--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,7 @@
 #POSTGRESQL DATABASE VARIABLES
-PG_CONTAINER_NAME = 'postgres_db'
-POSTGRES_DB = 'ft_transcendence_db'
+POSTGRES_DB = 'postgres_db'
 POSTGRES_USER = 'usertest'
 POSTGRES_PASSWORD = '1234'
-PGDATA = '/data/postgres_db'
 
-DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}?schema=public"
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5434/${POSTGRES_DB}?schema=public"
+JWT_SECRET='myjwtsecret'
