--- a/backend/package.json
+++ b/backend/package.json
@@ -18,18 +18,32 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migrate": "npx prisma migrate dev"
+    "migrate": "npx prisma migrate dev",
+    "db:deploy": "sudo npx prisma migrate deploy",
+    "db:up": "docker-compose up -d",
+    "db:rm": "docker-compose rm -fsv",
+    "db:restart": "npm db:rm && npm db:up && sleep 1 && npm db:deploy"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.1.0",
+    "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.1.0",
     "@nestjs/typeorm": "^10.0.0",
+    "@nestjs/websockets": "^10.1.0",
     "@prisma/client": "^4.16.2",
+    "@types/validator": "^13.7.17",
+    "argon2": "^0.30.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.7.1",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
@@ -39,6 +53,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
