--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,8 @@
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.1.1",
+    "argon2": "^0.31.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
