rm test template.env

--- a/template.env
+++ b/template.env
@@ -1,5 +1,5 @@
-PG_CONTAINER_NAME=postgres
-POSTGRES_DB=transcendence
-POSTGRES_USER=test
-POSTGRES_PASSWORD=test
-PGDATA=/var/lib/data
+PG_CONTAINER_NAME=
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+PGDATA=
