--- a/backend/template.env
+++ b/backend/template.env
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://test:test@localhost:5432/transcendence?schema=public"
-JWT_SECRET="secret"
-REFRESH_SECRET="secret"
+DATABASE_URL=
+JWT_SECRET=
+REFRESH_SECRET=
