--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,10 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.2.2",
     "@nestjs/websockets": "^10.2.2",
+    "cache-manager": "^5.2.3",
+    "cache-manager-redis-yet": "^4.1.2",
     "ioredis": "^5.3.2",
+    "redis": "^4.6.8",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -35,6 +38,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cache-manager": "^4.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
@@ -44,6 +48,7 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "i": "^0.3.7",
     "jest": "^29.5.0",
     "prettier": "^2.8.8",
     "prisma": "^5.1.1",
