--- a/backend/package.json
+++ b/backend/package.json
@@ -27,12 +27,18 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.2.2",
     "@nestjs/websockets": "^10.2.2",
+    "@prisma/client": "^5.2.0",
+    "aragon": "^0.0.1",
+    "argon2": "^0.31.0",
     "cache-manager": "^5.2.3",
     "cache-manager-redis-yet": "^4.1.2",
+    "class-validator": "^0.14.0",
     "ioredis": "^5.3.2",
+    "node-pre-gyp": "^0.17.0",
     "redis": "^4.6.8",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
