--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "-": "^0.0.1",
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.14.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,7 +16,9 @@
     "@types/node": "^16.18.40",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@uidotdev/usehooks": "^2.2.0",
     "add": "^2.0.6",
+    "axios": "^1.5.0",
     "or": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,6 +27,7 @@
     "socket.io-client": "^4.7.2",
     "tailwind": "^4.0.0",
     "typescript": "^4.9.5",
+    "use-local-storage": "^3.0.0",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.19"
   },
