--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "-": "^0.0.1",
     "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.14.7",
+    "@reactivers/hooks": "github:reactivers/hooks",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
