--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,8 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.2.4",
+    "@nestjs/websockets": "^10.2.4",
     "@prisma/client": "^5.1.1",
     "argon2": "^0.31.0",
     "class-transformer": "^0.5.1",
@@ -38,6 +40,8 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "socket-io": "^1.0.0",
+    "socket.io": "^4.7.2",
     "uuid": "^9.0.0",
     "uuidv4": "^6.2.13"
   },
