--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,13 @@
     "@twilio-paste/chat-composer": "^5.0.0",
     "@twilio-paste/core": "^20.2.0",
     "@twilio-paste/icons": "^12.1.0",
+    "@twilio-paste/lexical-library": "^4.0.0",
     "@twilio-paste/theme": "^11.0.1",
     "axios": "^1.5.0",
     "draft-js": "^0.11.7",
     "htop": "^1.0.1",
     "lexical": "^0.12.0",
+    "or": "^0.2.0",
     "prop-types": "^15.8.1",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
