--- a/backend/package.json
+++ b/backend/package.json
@@ -33,14 +33,16 @@
     "argon2": "^0.31.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "jsonc": "^2.0.0",
-    "pg": "^8.11.1",
-    "cookie-parser": "^1.4.6",
     "node-fetch": "^3.3.2",
+    "otplib": "^12.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pg": "^8.11.1",
+    "qrcode": "^1.5.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "socket-io": "^1.0.0",
