--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-socket.io": "^10.2.4",
     "@nestjs/websockets": "^10.2.4",
     "@prisma/client": "^5.1.1",
+    "@types/qrcode": "^1.5.2",
     "argon2": "^0.31.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
