--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "argon2": "^0.31.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cloudinary": "^1.40.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "jsonc": "^2.0.0",
