--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -2,9 +2,12 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": ["ES2020", "DOM", "DOM.Iterable", "es6", "dom"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "strictNullChecks": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
