--- a/backend/.prettierrc
+++ b/backend/.prettierrc
@@ -1,10 +1,10 @@
 {
- "trailingComma": "es5",
- "tabWidth": 4,
- "semi": true,
- "singleQuote": true,
- "max_line_lendth": 100,
- "indent_style": true,
- "bracketSpacing": true,
- "bracketSameLine": true
+    "trailingComma": "es5",
+    "tabWidth": 4,
+    "semi": true,
+    "singleQuote": true,
+    "max_line_length": 100,
+    "indent_style": true,
+    "bracketSpacing": true,
+    "bracketSameLine": true
 }
