--- a/backend/template.env
+++ b/backend/template.env
@@ -11,6 +11,5 @@ POSTGRES_USER=
 POSTGRES_PASSWORD=
 PGDATA=
 
-CLOUDINARY_CLOUDNAME=
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
+ENCRPYT_SECRET=
+ENCRYPT_SALT=
