--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,9 +1,9 @@
 db:
-	docker compose up -d --build --force-recreate
+	sudo docker compose up -d --build --force-recreate
 
 fclean:
-	docker stop $$(docker ps -a -q);
-	docker rm $$(docker ps -a -q);
-	docker rmi $$(docker images -q);
-	docker volume rm $$(docker volume ls -q);
-	docker network rm $$(docker network ls -q)
+	sudo docker stop $$(sudo docker ps -a -q);
+	sudo docker rm $$(sudo docker ps -a -q);
+	sudo docker rmi $$(sudo docker images -q);
+	sudo docker volume rm $$(sudo docker volume ls -q);
+	sudo docker network rm $$(sudo docker network ls -q)
